syntax = "proto3";
option java_multiple_files = true;
package io.github.bfeng.simplemapred.workflow;

message TaskConf {
    int32 id = 1;
    string host = 2;
    int32 port = 3;
}