syntax = "proto3";
option java_multiple_files = true;
package io.github.bfeng.simplemapred.resource;

import "TaskConf.proto";

message StartMapperRequest {
    int32 clusterId = 1;
    repeated int32 mapperIds = 2;
}

message StartMapperResponse {
    int32 clusterId = 1;
    repeated io.github.bfeng.simplemapred.workflow.TaskConf mappers = 2;
}

message StopMapperRequest {
    int32 clusterId = 1;
}

message StopMapperResponse {
    repeated int32 status = 1;
}

message StartReducerRequest {
    int32 clusterId = 1;
    repeated int32 reducerIds = 2;
}

message StartReducerResponse {
    int32 clusterId = 1;
    repeated io.github.bfeng.simplemapred.workflow.TaskConf reducers = 2;
}

message StopReducerRequest {
    int32 clusterId = 1;
}

message StopReducerResponse {
    repeated int32 status = 1;
}

service WorkerService {
    rpc startMappers (StartMapperRequest) returns (StartMapperResponse);
    rpc stopMappers (StopMapperRequest) returns (StopMapperResponse);

    rpc startReducers (StartReducerRequest) returns (StartReducerResponse);
    rpc stopReducers (StopReducerRequest) returns (StopReducerResponse);
}